--- a/bower.json
+++ b/bower.json
@@ -15,10 +15,13 @@
     "tests"
   ],
   "dependencies": {
-    "react": "~0.13.1",
+    "react": "~0.12.0",
     "underscore": "~1.6.0",
     "react-sortable": "git@github.com:prometheusresearch/react-sortable.git",
     "jquery": "~2.1.3",
     "normalize.css": "~3.0.3"
+  },
+  "resolutions": {
+    "react": "e-tag:54933f86-"
   }
 }
